# api-service

./: .env.example  .gitignore  ADMIN_PORTAL_README.md  AGENTS.md  API_README.md  Cargo.toml  Dockerfile  Dockerfile.dev  INTEGRATION.md  Makefile  README.md  SSH_USAGE_EXAMPLE.md  components.json  docker-compose.yml  docker-entrypoint.sh  health-check.sh  middleware.ts  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  quick-start.sh  test-auth.sh  test-integration.sh  tsconfig.json
api/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  error.todo  index.ts  tsconfig.json
api/config/: database.ts
api/controllers/: apiKeyControllers.ts  autControllers.ts  messagingControllers.ts
api/middlewares/: authMiddlewares.ts
api/models/: messagingModels.ts  userModels.ts
api/prisma/: dev.db  schema.prisma
api/proto/: sky_genesis.proto
api/routes/: apiKeyRoutes.ts  auth.Routes.ts  messagingRoutes.ts
api/services/: apiKeyService.ts  authService.ts  messagingService.ts
api/src/: main.rs  main_backup.rs  main_full.rs  main_ultra_minimal.rs  openapi.rs  schema.rs  seedDatabase.ts  server.ts  ssh.rs  ssh_backup.rs  ssh_shell.rs  websocket.rs
api/src/config/: database.ts  mod.rs  permissions.ts
api/src/controllers/: api_keyController_single.ts  api_keyControllers.ts  api_keys.rs  authController.ts  auth_controller.rs  controller.rs  data_controller.rs  data_controller_backup.rs  device_controller.rs  device_controller_backup.rs  discord_controller.rs  endpointController.ts  git_controller.rs  grafana_controller.rs  key_controller.rs  logger_controller.rs  mac_controller.rs  mail_controller.rs  mod.rs  oauth2_controller.rs  openpgp_controller.rs  organizationController.ts  poweradmin_controller.rs  projectController.ts  unifiedAccountController.ts  unifiedAuthController.ts  unifiedUserController.ts  voip_controller.rs
api/src/core/: api_keys.rs  asterisk_client.rs  audit_manager.rs  core.rs  crypto.rs  discord_core.rs  dkim_handler.rs  encryption_manager.rs  fido2.rs  git_core.rs  grafana_core.rs  grpc.rs  imap_handler.rs  keycloak.rs  mac_certificates.rs  mac_core.rs  mail_storage_manager.rs  mod.rs  opentelemetry.rs  pop3_handler.rs  poweradmin_core.rs  search_core.rs  signal_noise_handler.rs  smtp_handler.rs  snmp_agent.rs  snmp_manager.rs  snmp_trap_listener.rs  spf_dmarc_handler.rs  stalwart_client.rs  transport_security.rs  vault.rs  voip.rs  voip_certificates.rs  vpn.rs  webdav.rs
api/src/data/: data_controller.rs  mod.rs
api/src/middlewares/: api_keyMiddlewares.ts  api_keys.rs  auth.rs  auth.ts  auth_guard.rs  auth_middleware.rs  cert_auth_middleware.rs  discord_middleware.rs  git_middleware.rs  grafana_middleware.rs  logging.rs  mac_middleware.rs  mod.rs  openpgp_middleware.rs  poweradmin_middleware.rs  voip_middleware.rs
api/src/models/: api_keyModels.ts  api_keys.rs  authModels.ts  data_model.rs  discord_model.rs  git_model.rs  grafana_models.rs  key_model.rs  logger_model.rs  mail.rs  mod.rs  openpgp_model.rs  poweradmin_models.rs  search_models.rs  unifiedAccountModels.ts  user.rs  voip.rs
api/src/queries/: api_keyQueries.ts  api_keys.rs  discord_queries.rs  git_queries.rs  grafana_queries.rs  key_queries.rs  logger_queries.rs  mac_queries.rs  mod.rs  poweradmin_queries.rs  query.rs  voip_queries.rs
api/src/routes/: api_keyRoutes.ts  api_keys.rs  authRoutes.ts  auth_routes.rs  auth_routes_tests.rs  data_routes.rs  device_routes.rs  device_routes_backup.rs  discord_routes.rs  endpointRoutes.ts  git_routes.rs  grafana_routes.rs  grpc_routes.rs  key_routes.rs  logger_routes.rs  mac_routes.rs  mail_routes.rs  mod.rs  monitoring_routes.rs  oauth2_routes.rs  openpgp_routes.rs  opentelemetry_routes.rs  organizationRoutes.ts  poweradmin_routes.rs  projectRoutes.ts  search_routes.rs  security_routes.rs  snmp_routes.rs  ssh_routes.rs  test_routes.rs  unifiedAccountRoutes.ts  unifiedAuthRoutes.ts  unifiedUserRoutes.ts  voip_routes.rs  vpn_routes.rs  webdav_routes.rs  websocket_routes.rs
api/src/schema/: grafana_alert_rules.rs  grafana_audit_logs.rs  grafana_dashboards.rs  grafana_datasources.rs  grafana_templates.rs  mod.rs  poweradmin_operation_logs.rs  poweradmin_records.rs  poweradmin_zone_templates.rs  poweradmin_zones.rs
api/src/search/: mod.rs  models.rs  search_core.rs  service.rs
api/src/services/: api_keyServices.ts  api_keys.rs  application_service.rs  authService.ts  auth_service.rs  authorization_service.rs  basic_services.rs  data_service.rs  device_service.rs  discord_service.rs  encryption_service.rs  endpointService.ts  git_service.rs  grafana_service.rs  key_service.rs  logger_service.rs  mac_service.rs  mail_service.rs  mod.rs  monitoring_service.rs  openpgp_service.rs  organizationService.ts  poweradmin_service.rs  projectService.ts  search_service.rs  security_service.rs  session_service.rs  simpleAuthService.ts  two_factor_service.rs  unifiedAccountService.ts  unifiedAuthService.ts  unifiedUserService.ts  vault_manager.rs  vault_service.rs  voip_service.rs
api/src/ssh_shell/: mod.rs  ssh_session.rs  ssh_shell.rs
api/src/tests/: api_keyTests.ts  api_keys.rs  auth_tests.rs  discord_tests.rs  git_tests.rs  grafana_tests.rs  key_tests.rs  logger_tests.rs  mac_tests.rs  mod.rs  poweradmin_tests.rs  protocol_tests.rs  search_tests.rs  security_tests.rs  snmp_tests.rs  test.rs  voip_tests.rs
api/src/utils/: apiResponse.ts  api_keyUtils.ts  api_keys.rs  discord_utils.rs  git_utils.rs  grafana_utils.rs  key_utils.rs  logger_utils.rs  mac_cert_utils.rs  mac_utils.rs  mod.rs  poweradmin_utils.rs  search_utils.rs  tokens.rs  util.rs  voip_utils.rs
api/static/: api_docs.html
api/tests/: auth.test.ts  messaging.test.ts
api/utils/: logger.ts
api/v1/routes/: auth.ts  users.ts
cli/: .env.example  Cargo.toml  README.md  config.toml  test_shell.sh
cli/examples/: network_check.sh
cli/src/: main.rs  ssh_shell.rs
cli/src/config/: mod.rs
cli/src/controllers/: auth_controller.rs  device_controller.rs  key_controller.rs  mail_controller.rs  mod.rs  network_controller.rs  (+6 more)
(+343 files in other folders)
