[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vault = "0.1"
reqwest = { version = "0.11", features = ["json"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = "8.0"

# Cryptographic primitives - Modern algorithms
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["getrandom"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
sha3 = "0.10"
hkdf = "0.12"
argon2 = { version = "0.5", features = ["std"] }
zeroize = { version = "1.6", features = ["zeroize_derive"] }

# Legacy algorithms (for backward compatibility)
rsa = { version = "0.9", features = ["sha2", "pem", "pkcs1v15"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["signing", "verifying", "pem"] }
sha2 = "0.10"

# Utilities
rand = "0.8"
base64 = "0.21"
hex = "0.4"
tokio-stream = "0.1"
futures-util = "0.3"
lazy_static = "1.4"

[[bin]]
name = "api"
path = "src/main.rs"
