[package]
name = "api"
version = "1.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4", features = ["websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json"] }
diesel = { version = "2.1", features = ["postgres", "sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = { version = "10.1", features = ["rust_crypto"] }

# Cryptography - Modern algorithms
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0.1", features = ["getrandom"] }
ed25519-dalek = { version = "2.0", features = ["serde"] }
p384 = { version = "0.13", features = ["ecdsa", "pem"] }
sha3 = "0.10"
hkdf = "0.12"
argon2 = { version = "0.5", features = ["std"] }
zeroize = { version = "1.6", features = ["zeroize_derive"] }

# Legacy algorithms
rsa = { version = "0.9", features = ["sha2", "pem", "pkcs5"] }
p256 = { version = "0.13", features = ["ecdsa", "pem"] }
ecdsa = { version = "0.16", features = ["signing", "verifying", "pem"] }
sha2 = "0.10"

# Utilities
rand = "0.9"
base64 = "0.22"
hex = "0.4"
tokio-stream = "0.1"
futures-util = "0.3"
lazy_static = "1.4"
redis = { version = "0.32", features = ["tokio-comp"] }
base32 = "0.5"
urlencoding = "2.1"
sha1 = "0.10"

# OpenAPI / Swagger
utoipa = { version = "5.4", features = ["chrono"] }
utoipa-swagger-ui = "9.0"

# SNMP Integration
snmp = "0.2"
snmp-parser = "0.11"
thiserror = "2.0"

# Protocol Integrations
tokio-tungstenite = "0.28"
xmpp = "0.6"

# SSH
russh = "0.54"
russh-keys = "0.49"

# gRPC / QUIC
tonic = "0.14"
prost = "0.14"
quinn = "0.11"
h3 = "0.0.8"
prost-build = "0.14"

# WebDAV / CalDAV / CardDAV
webdav-handler = "0.2"
icalendar = "0.17"
vcard = "0.4"

# OAuth2 / OIDC + FIDO2
openidconnect = "4.0"
webauthn-rs = "0.5"
webauthn-authenticator-rs = "0.5"

# OpenTelemetry
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["tonic"] }
opentelemetry-prometheus = "0.29"

# Additional utilities
async-trait = "0.1"
tower = "0.5"
tower-http = "0.6"

# OpenPGP
# sequoia-openpgp = "2.0"  # Commented out due to nettle-sys compilation issues
pgp = "0.11"

# Search indexing
tantivy = "0.25"

# Regular expressions
regex = "1.0"

# Missing dependencies
tokio-rustls = "0.26"
lettre = { version = "0.11", features = ["tokio1-rustls", "ring", "rustls-native-certs"], default-features = false }
ring = "0.17"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
tokio-postgres = "0.7"
hmac = "0.12"
rustls = "0.23"

# Compression (Zstandard)
zstd = "0.13.2"
zstd-safe = "6.0.6"

[[bin]]
name = "api"
path = "src/main.rs"

[build-dependencies]
tonic-build = "0.12.3"