[package]
name = "api-cli"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tonic = "0.9"
tokio = { version = "1.0", features = ["full"] }
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
vaultrs = "0.7"
openidconnect = "3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
opentelemetry = "0.20"
opentelemetry-otlp = "0.13"
anyhow = "1.0"
thiserror = "1.0"
ssh2 = "0.9"
toml = "0.8"
url = "2.0"
base64 = "0.21"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
ring = "0.17"
